@@ -1,5 +1,10 @@
 2012-11-20  Sergio Martin <sergio.martin@artica.es>
 
+	* pandora_windows_service.cc: Added support for
+	custom fields
+
+2012-11-20  Sergio Martin <sergio.martin@artica.es>
+
 	* modules/pandora_module_factory.cc: Fix a few
 	variable declaration bugs
 
